app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */


 body {
 background-image: url('http://hmbcdetroit.org/wp-content/uploads/background-image-music.jpg');
 font-family: 'Neucha', sans-serif;
 font-weight: 1000;
 font-size:   20px;
 margin-top: 25px;
 }

#submitbutton {
  margin-bottom: 30px;
}

 #title {
   text-decoration: underline;
 }

 .pleft {
   margin-left: -40px;
 }

 .field {
  font-weight: 1000;
  font-size:   15px;
 }

 .center {
  text-align: center !important;  
  float: center;
  margin: 0 auto;
}

#formbox {
  max-width: 300px;
  float: center;
  margin: 0 auto;
}

.pic {
  max-width: 15em;
}

